2006-09-17  Mei Ligang  <ligang@sunnorth.com.cn>

	* config/tc-score.c: New file.
	* config/tc-score.h: Newf file.
	* configure.tgt: Add Score target.
	* Makefile.am: Add Score files.
	* Makefile.in: Regenerate.
	* NEWS: Mention new target support.

2006-09-16  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (s_arm_unwind_movsp): Add offset argument.
	* doc/c-arm.texi (movsp): Document offset argument.

2006-09-16  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (thumb32_negate_data_op): Consistently use
	unsigned int to avoid 64-bit host problems.

2006-09-15  Bernd Schmidt  <bernd.schmidt@analog.com>

	* config/bfin-parse.y (binary): Do some more constant folding for
	additions.

2006-09-13  Jan Beulich  <jbeulich@novell.com>

	* input-file.c (input_file_give_next_buffer): Demote as_bad to
	as_warn.

2006-09-13  Alan Modra  <amodra@bigpond.net.au>

	PR gas/3165
	* config/tc-sh (DWARF2_CIE_DATA_ALIGNMENT): Wrap negative number
	in parens.

2006-09-13  Alan Modra  <amodra@bigpond.net.au>

	* input-file.c (input_file_open): Replace as_perror with as_bad
	so that gas exits with error on file errors.  Correct error
	message.
	(input_file_get, input_file_give_next_buffer): Likewise.
	* input-file.h: Update comment.

2006-09-11  Tomas Frydrych  <dr.tomas@yahoo.co.uk>

	PR gas/3172
	* config/tc-arm.c (parse_typed_reg_or_scalar): Accept wCg class
	registers as a sub-class of wC registers.

2006-09-11  Alan Modra  <amodra@bigpond.net.au>

	PR gas/3165
	* config/tc-mips.h (enum dwarf2_format): Forward declare.
	(DWARF2_CIE_DATA_ALIGNMENT): Wrap negative number in parens.
	* config/tc-alpha.h (DWARF2_CIE_DATA_ALIGNMENT): Likewise.
	* config/tc-arm.h (DWARF2_CIE_DATA_ALIGNMENT): Likewise.

2006-09-08  Nick Clifton  <nickc@redhat.com>

	PR gas/3129
	* doc/as.texinfo (Macro): Improve documentation about separating
	macro arguments from following text.

2006-09-08  Paul Brook  <paul@codesourcery.com>
